<resources>
    <string name="app_name">CH0R3S</string>
    <string name="dropDownT">SELECT A YEAR.....</string>
    <string name="email_Address">Post By:</string>
    <string name="emailAddress">Post By:</string>
    <string name="delete">Delete</string>
    <string name="Sharing">Sharing</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="messaging_token">This is your token called from get!!!!!! %s</string>
    <string name="login_image">This is Login Image</string>
    <string name="usernamePrompt"> Enter username  </string>
    <string name="passwordPrompt">Enter Password</string>
    <string name="forgotPasswd">Forgot Password?</string>
    <string name="createAccount">Create new Account</string>
    <string name="loginFirebase">Login</string>
    <string name="enteruserName">Enter a non Gmail account </string>
    <string name="enterPassword"> Enter a PassWord</string>
    <string name="enterName">Enter Name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="enterPasswd">Enter a Password</string>
    <string name="signUP">Sign Up</string>
    <string name="reportUser">Report User</string>

    "
    <string-array name="Year">
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="title_activity_sign_up">SignUp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_report_user">reportUser</string>
</resources>
