<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientsignup"
    app:layout_constraintCircleRadius="0dp"
    tools:context=".Login.UI.LoginActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="390dp"
        android:layout_height="193dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/login_image"

        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/ch0resloginnew"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="338dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/softeRealBlue"
        android:hint="@string/enterEmail"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="-3dp"
            tools:layout_editor_absoluteY="454dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="333dp"
        android:layout_height="63dp"
        android:layout_marginBottom="80dp"

        android:hint="@string/enterPasswd"
        app:layout_constraintBottom_toTopOf="@+id/registerMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleDrawable="@drawable/twotone_visibility_black_18dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="443dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerMe"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_width="344dp"
        android:layout_height="50dp"
        android:layout_marginBottom="208dp"
        android:background="@drawable/buttonlayouttwo"
        android:gravity="center"
        android:text="@string/signUP"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:icon="@drawable/ic_baseline_person_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>